[package]
name = "bevy_simple_scroll_view"
version = "0.1.0"
edition = "2021"
exclude = [".github/","wasm/", "record.gif"]
categories = ["game-development", "gui"]
keywords = ["bevy","ui"]
repository = "https://github.com/Leinnan/bevy_simple_scroll_view"
homepage = "https://github.com/Leinnan/bevy_simple_scroll_view"
license = "MIT OR Apache-2.0"
description = "Simple to use plugin implementing ScrollView into Bevy engine."

[dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_ui", "bevy_asset", "bevy_text"]

[dev-dependencies.bevy]
version = "0.13"
default-features = true
